test/integration/progs/errors/string_get_2.blu
s := "hello"
print s[-1]
